Added Ideas suggested from play.

--- a/Gloomhaven Initiative Tracker/Gloomhaven Initiative Tracker.tex
+++ b/Gloomhaven Initiative Tracker/Gloomhaven Initiative Tracker.tex
@@ -24,7 +24,10 @@
 \definecolor{hinthighlight}{RGB}{255,150,150}
 
 \newcommand\cincludegraphics[2][]{\raisebox{-0.2\height}{\includegraphics[#1]{#2}}}
-\graphicspath{{/home/canada/Documents/Gloomhaven Assets/Creator Pack V2/}}
+% Linux Path
+% \graphicspath{{/home/canada/Documents/Gloomhaven Assets/Creator Pack V2/}}
+% Windows Path
+\graphicspath{{D:/Stuff/Gloomhaven/Creator Pack V2}}
 
 \hypersetup{
     colorlinks=true,
@@ -37,21 +40,24 @@
 \begin{document}
 \begin{landscape}
     \begin{center}
-        Date: \underline{\hspace{5em}}\hspace{3em}Scenario \#\ : \underline{\hspace{3em}}\hspace{3em}City Event \#\ : \underline{\hspace{2em}}\hspace{1em}Road Event \#\ : \underline{\hspace{2em}}
+        % Top line of data.
+        Date: \underline{\hspace{5em}}\hspace{3em}Scenario \#\ : \underline{\hspace{3em}}\hspace{3em}City Event \#\ : \underline{\hspace{2em}}\hspace{1em}Road Event \#\ : \underline{\hspace{2em}}\hspace{3em}Misc: \underline{\hspace{20em}}
         \vspace{0.5\baselineskip}
 
+        % Character and Monster lines
         \begin{tabular}{|c|c|}
             \hline
             \begin{tabular}{c c c c c c c c c c c}
                 \multicolumn{11}{c}{Characters Used:}                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    \\
-                \rule{0pt}{12pt}\includegraphics[height=1em,page=1]{Icon Pack/Class Icons and Augments.pdf}\underline{\hspace{1.25em}}  & \includegraphics[height=1em,page=2]{Icon Pack/Class Icons and Augments.pdf}\underline{\hspace{1.25em}}  & \includegraphics[height=1em,page=3]{Icon Pack/Class Icons and Augments.pdf}\underline{\hspace{1.25em}}  & \includegraphics[height=1em,page=4]{Icon Pack/Class Icons and Augments.pdf}\underline{\hspace{1.25em}}  & \includegraphics[height=1em,page=5]{Icon Pack/Class Icons and Augments.pdf}\underline{\hspace{1.25em}}  & \includegraphics[height=1em,page=6]{Icon Pack/Class Icons and Augments.pdf}\underline{\hspace{1.25em}}  & \includegraphics[height=1em,page=7]{Icon Pack/Class Icons and Augments.pdf}\underline{\hspace{1.25em}} & \includegraphics[height=1em,page=8]{Icon Pack/Class Icons and Augments.pdf}\underline{\hspace{1.25em}} & \includegraphics[height=1em,page=9]{Icon Pack/Class Icons and Augments.pdf}\underline{\hspace{1.25em}} & \includegraphics[height=1em,page=10]{Icon Pack/Class Icons and Augments.pdf}\underline{\hspace{1.25em}} & \includegraphics[height=1em,page=11]{Icon Pack/Class Icons and Augments.pdf}\underline{\hspace{1.25em}} \\
-                \rule{0pt}{12pt}\includegraphics[height=1em,page=12]{Icon Pack/Class Icons and Augments.pdf}\underline{\hspace{1.25em}} & \includegraphics[height=1em,page=13]{Icon Pack/Class Icons and Augments.pdf}\underline{\hspace{1.25em}} & \includegraphics[height=1em,page=14]{Icon Pack/Class Icons and Augments.pdf}\underline{\hspace{1.25em}} & \includegraphics[height=1em,page=15]{Icon Pack/Class Icons and Augments.pdf}\underline{\hspace{1.25em}} & \includegraphics[height=1em,page=16]{Icon Pack/Class Icons and Augments.pdf}\underline{\hspace{1.25em}} & \includegraphics[height=1em,page=17]{Icon Pack/Class Icons and Augments.pdf}\underline{\hspace{1.25em}} & \includegraphics[height=1em,page=1]{Icon Pack/JotL Class Icons.pdf}\underline{\hspace{1.25em}}         & \includegraphics[height=1em,page=2]{Icon Pack/JotL Class Icons.pdf}\underline{\hspace{1.25em}}         & \includegraphics[height=1em,page=3]{Icon Pack/JotL Class Icons.pdf}\underline{\hspace{1.25em}}         & \includegraphics[height=1em,page=4]{Icon Pack/JotL Class Icons.pdf}\underline{\hspace{1.25em}}          &                                                                                                         \\
+                \rule{0pt}{12pt}\includegraphics[height=1em,page=1]{Icon Pack/Class Icons and Augments.pdf}\underline{\hspace{1em}}  & \includegraphics[height=1em,page=2]{Icon Pack/Class Icons and Augments.pdf}\underline{\hspace{1em}}  & \includegraphics[height=1em,page=3]{Icon Pack/Class Icons and Augments.pdf}\underline{\hspace{1em}}  & \includegraphics[height=1em,page=4]{Icon Pack/Class Icons and Augments.pdf}\underline{\hspace{1em}}  & \includegraphics[height=1em,page=5]{Icon Pack/Class Icons and Augments.pdf}\underline{\hspace{1em}}  & \includegraphics[height=1em,page=6]{Icon Pack/Class Icons and Augments.pdf}\underline{\hspace{1em}}  & \includegraphics[height=1em,page=7]{Icon Pack/Class Icons and Augments.pdf}\underline{\hspace{1em}} & \includegraphics[height=1em,page=8]{Icon Pack/Class Icons and Augments.pdf}\underline{\hspace{1em}} & \includegraphics[height=1em,page=9]{Icon Pack/Class Icons and Augments.pdf}\underline{\hspace{1em}} & \includegraphics[height=1em,page=10]{Icon Pack/Class Icons and Augments.pdf}\underline{\hspace{1em}} & \includegraphics[height=1em,page=11]{Icon Pack/Class Icons and Augments.pdf}\underline{\hspace{1em}} \\
+                \rule{0pt}{12pt}\includegraphics[height=1em,page=12]{Icon Pack/Class Icons and Augments.pdf}\underline{\hspace{1em}} & \includegraphics[height=1em,page=13]{Icon Pack/Class Icons and Augments.pdf}\underline{\hspace{1em}} & \includegraphics[height=1em,page=14]{Icon Pack/Class Icons and Augments.pdf}\underline{\hspace{1em}} & \includegraphics[height=1em,page=15]{Icon Pack/Class Icons and Augments.pdf}\underline{\hspace{1em}} & \includegraphics[height=1em,page=16]{Icon Pack/Class Icons and Augments.pdf}\underline{\hspace{1em}} & \includegraphics[height=1em,page=17]{Icon Pack/Class Icons and Augments.pdf}\underline{\hspace{1em}} & \includegraphics[height=1em,page=1]{Icon Pack/JotL Class Icons.pdf}\underline{\hspace{1em}}         & \includegraphics[height=1em,page=2]{Icon Pack/JotL Class Icons.pdf}\underline{\hspace{1em}}         & \includegraphics[height=1em,page=3]{Icon Pack/JotL Class Icons.pdf}\underline{\hspace{1em}}         & \includegraphics[height=1em,page=4]{Icon Pack/JotL Class Icons.pdf}\underline{\hspace{1em}}          &                                                                                                         \\
             \end{tabular} & \begin{tabular}{c c c c}
                                 \multicolumn{4}{c}{Monsters Used:}                                                                                        \\
-                                \rule{0pt}{15pt}\underline{\hspace{7em}} & \underline{\hspace{7em}} & \underline{\hspace{7em}} & \underline{\hspace{7em}} \\
-                                \rule{0pt}{15pt}\underline{\hspace{7em}} & \underline{\hspace{7em}} & \underline{\hspace{7em}} &                          \\
+                                \rule{0pt}{15pt}\underline{\hspace{8.5em}} & \underline{\hspace{8.5em}} & \underline{\hspace{8.5em}} & \underline{\hspace{8.5em}} \\
+                                \rule{0pt}{15pt}\underline{\hspace{8.5em}} & \underline{\hspace{8.5em}} & \underline{\hspace{8.5em}} &                          \\
                             \end{tabular}
         \end{tabular}
+        % The main initiative tracker table.
         \begin{tabular}{||c||l|@{\hskip3pt}c@{\hskip3pt}|@{\hskip3pt}c@{\hskip3pt}||l|@{\hskip3pt}c@{\hskip3pt}|@{\hskip3pt}c@{\hskip3pt}||l|@{\hskip3pt}c@{\hskip3pt}|@{\hskip3pt}c@{\hskip3pt}||l|@{\hskip3pt}c@{\hskip3pt}|@{\hskip3pt}c@{\hskip3pt}||l|@{\hskip3pt}c@{\hskip3pt}|@{\hskip3pt}c@{\hskip3pt}||l|@{\hskip3pt}c@{\hskip3pt}|@{\hskip3pt}c@{\hskip3pt}||l|@{\hskip3pt}c@{\hskip3pt}|@{\hskip3pt}c@{\hskip3pt}||l|@{\hskip3pt}c@{\hskip3pt}|@{\hskip3pt}c@{\hskip3pt}||l|@{\hskip3pt}c@{\hskip3pt}|@{\hskip3pt}c@{\hskip3pt}||l|@{\hskip3pt}c@{\hskip3pt}|@{\hskip3pt}c@{\hskip3pt}||}
             \hline\hline
             Round                & 1st & \cincludegraphics[height=1em,page=10]{Icon Pack/General Icons.pdf}? & \cincludegraphics[height=1em,page=9]{Icon Pack/General Icons.pdf}? & 2nd & \cincludegraphics[height=1em,page=10]{Icon Pack/General Icons.pdf}? & \cincludegraphics[height=1em,page=9]{Icon Pack/General Icons.pdf}? & 3rd & \cincludegraphics[height=1em,page=10]{Icon Pack/General Icons.pdf}? & \cincludegraphics[height=1em,page=9]{Icon Pack/General Icons.pdf}? & 4th & \cincludegraphics[height=1em,page=10]{Icon Pack/General Icons.pdf}? & \cincludegraphics[height=1em,page=9]{Icon Pack/General Icons.pdf}? & 5th & \cincludegraphics[height=1em,page=10]{Icon Pack/General Icons.pdf}? & \cincludegraphics[height=1em,page=9]{Icon Pack/General Icons.pdf}? & 6th & \cincludegraphics[height=1em,page=10]{Icon Pack/General Icons.pdf}? & \cincludegraphics[height=1em,page=9]{Icon Pack/General Icons.pdf}? & 7th & \cincludegraphics[height=1em,page=10]{Icon Pack/General Icons.pdf}? & \cincludegraphics[height=1em,page=9]{Icon Pack/General Icons.pdf}? & 8th & \cincludegraphics[height=1em,page=10]{Icon Pack/General Icons.pdf}? & \cincludegraphics[height=1em,page=9]{Icon Pack/General Icons.pdf}? & 9th & \cincludegraphics[height=1em,page=10]{Icon Pack/General Icons.pdf}? & \cincludegraphics[height=1em,page=9]{Icon Pack/General Icons.pdf}? & 10th & \cincludegraphics[height=1em,page=10]{Icon Pack/General Icons.pdf}? & \cincludegraphics[height=1em,page=9]{Icon Pack/General Icons.pdf}? \\
